# stock-analysis-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stock_mcp/: __init__.py  server.py
src/stock_mcp/data/: __init__.py  cache.py  yfinance_client.py
src/stock_mcp/prompts/: __init__.py  templates.py
src/stock_mcp/resources/: __init__.py  price_resource.py
src/stock_mcp/tools/: __init__.py  analyze.py  data_quality.py  events.py  fundamentals.py  news.py  portfolio.py  position.py  price_history.py  risk_metrics.py  stock_summary.py  symbol_search.py  technicals.py
src/stock_mcp/utils/: __init__.py  indicators.py  normalize.py  ohlcv.py  provenance.py  sanitize.py  validators.py
tests/: __init__.py  conftest.py  test_indicators.py  test_info_completeness.py  test_market_state.py  test_normalize.py  test_ohlcv.py  test_sanitize.py  test_schemas.py  test_uri.py  test_validators.py
tests/fixtures/: .gitkeep
tests/test_tools/: test_tool_schemas.py  test_verdict_invariants.py
