[project]
name = "stock-mcp"
version = "0.1.0"
description = "An MCP server that gives AI agents (Claude Code, Codex, etc.) stock analysis capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stock Analysis MCP" }]
keywords = ["mcp", "stock", "analysis", "claude", "fastmcp"]

dependencies = [
    "fastmcp>=2.0.0,<3",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "diskcache>=5.6.0",
    "pytz>=2024.1",
    "fredapi>=0.5.0",
]

[project.scripts]
stock-mcp = "stock_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-recording>=0.13.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pandas-stubs>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["numpy.typing.mypy_plugin"]
